gcc/testsuite/rust/rustc/ui/consts/const-as-fn_dg.rs
const FOO: usize = 0;

fn main() {
    FOO(); // { dg-error ".E0618." "" { target *-*-* } }
}

